--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -108,8 +108,8 @@
           <div class="items" style="width: 100vw;">
             <div class="large-col">
               <h2 class = "home-sections">Who Are We?</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id molestie enim. Suspendisse consequat urna non ante gravida euismod. In in nibh nulla. Vestibulum at tellus viverra nulla aliquam pulvinar. Maecenas nulla arcu, venenatis et ultrices id, tincidunt ut nisl. Etiam augue lectus,Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id molestie enim. Suspendisse consequat urna non ante gravida euismod. In in nibh nulla. Stibulum at tellus viverra nulla aliquam pulvinar. Maecenas nulla arcu, venenatis et ultrices id, tincidunt ut nisl. Maecenas nulla arcu, venenatis et ultrices id, tincidunt ut nisl. Etiam augue lectus,Lorem ipsum dolor</p>
-              {% comment %} <img src="{% static 'images/cornerstore-staff.jpeg' %}" alt="Coley Family" class ="coleys"> {% endcomment %}
+              <p>Welcome to the CornerStore! I am Susan Coley the owner, We are a family owned and operated convenience store that cooks wonderful southern, soul food for all.  We are open Monday-Wendesday from 5am-5pm and Thursday-Saturday from 5am-8pm</p>
+              <img src="{% static 'images/cornerstore-staff.jpeg' %}" alt="Coley Family" class ="coleys">
             </div>
             <div class="large-col-last">
               <h2 class = "home-sections">Today's Lunch</h2>
@@ -138,7 +138,7 @@
                     <i class="fa fa-quote-left fa-3x card-img-top rounded-circle" aria-hidden="true"></i>
                     <div class="card-body blockquote">
                       <p class="card-text">Great place to eat, great food, great prices and super friendly service. We love the Coleys.</p>
-                      <footer class="blockquote-footer"><cite title="Source Title">Danny</cite></footer>
+                      <footer class="blockquote-footer"><cite title="Source Title">-Danny</cite></footer>
                     </div>
                   </div>
                 </div>
@@ -148,7 +148,7 @@
                     <i class="fa fa-quote-left fa-3x card-img-top rounded-circle" aria-hidden="true"></i>
                     <div class="card-body blockquote">
                       <p class="card-text">Best frog legs I've had in a while. I will be back!</p>
-                      <footer class="blockquote-footer"><cite title="Source Title">Rodney</cite></footer>
+                      <footer class="blockquote-footer"><cite title="Source Title">-Rodney</cite></footer>
                     </div>
                   </div>
                 </div>
@@ -158,7 +158,7 @@
                     <i class="fa fa-quote-left fa-3x card-img-top rounded-circle" aria-hidden="true"></i>
                     <div class="card-body blockquote">
                       <p class="card-text">Good food and freshly made on every order.</p>
-                      <footer class="blockquote-footer"><cite title="Source Title">Matt-Kat</cite></footer>
+                      <footer class="blockquote-footer"><cite title="Source Title">-Matt-Kat</cite></footer>
                     </div>
                   </div>
                 </div>
@@ -172,10 +172,11 @@
       <p>{{event.description}}</p>
       <p>{{event.date}}</p>
     {% endfor %}
-  </body>
   <footer id = "navigation">
     <p>Number: (662) 568-7848</p>
     <a class="facebook" target="blank" href="https://www.facebook.com/thecornerstore7938/">Facebook</a>
-    <p>Address: 7938 RedlandSarepta Rd 38850 Houlka,Ms</p>
+    <p>Address: 7938 Redland Sarepta Rd 38850 Houlka,Ms</p>
   </footer>
+
+</body>
 </html>
